--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="copyright">Copyright 2019. All rights reserved. Made with Love in Pakistan</p>
+                        <p class="copyright">&copy; Copyright 2019. All rights reserved. Made with <i class="fa fa-heart" aria-hidden="true" style="color: red;font-size: 1.4em;"></i> in Pakistan.</p>
                     </div>
                 </div>
             </div>
