--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                             </div>
                             <h6>Sahar Ali Raza<small>Frontend Developer</small></h6>
                             <p>
-                                <a href="#"><img src="assets/flag.png" alt="image"></a>Dera Ismail Khan, <a href="#">Pakistan</a></p>
+                                <a href="#"><img src="assets/flag.png" alt="image"></a>Flat No. 8, Block No. 18, PHA Apartments, 
+Near ZTBL, Zero Point, G-7/1, Islamabad
+, <a href="#">Pakistan</a></p>
                             <ul class="social-links">
                                 <li><a href="https://www.facebook.com/mrsahar" target="_blank" class="fb"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="https://codepen.io/mrsahar/" target="_blank" class="codepen"><i class="fa fa-codepen"></i></a></li>
@@ -122,7 +124,7 @@
                                     </li>
                                     <li class="clearfix">
                                         <strong class="title">Address</strong>
-                                        <span class="cont">29050, Muslam Bazzar, Dikhan</span>
+                                        <span class="cont">Flat No. 8, Block No. 18, PHA Apartments, Near ZTBL, Zero Point, G-7/1, Islamabad</span>
                                     </li>
                                     <li class="clearfix">
                                         <strong class="title">E-mail</strong>
