--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                             </div>
                             <h6>Sahar Ali Raza<small>Frontend Developer</small></h6>
                             <p>
-                                <a href="#"><img src="assets/flag.png" alt="image"></a>Flat No. 8, Block No. 18, PHA Apartments, 
-Near ZTBL, Zero Point, G-7/1, Islamabad
+                                <a href="#"><img src="assets/flag.png" alt="image"></a>Islamabad
 , <a href="#">Pakistan</a></p>
                             <ul class="social-links">
                                 <li><a href="https://www.facebook.com/mrsahar" target="_blank" class="fb"><i class="fa fa-facebook"></i></a></li>
